# parser-combinator

./: Cargo.toml  README.md
calculator/: Cargo.toml  Dioxus.toml  index.html
calculator/src/: expr_parser.rs  main.rs
calculator/web/public/: index.html
calculator/web/public/assets/: bulma.min-f4af30e387ebb162.css  calculator-59279ad48f95e405.js.br
docs/: index.html
docs/assets/: bulma.min-f4af30e387ebb162.css.br  calculator-59279ad48f95e405.js  calculator_bg-72afaab8edaa689c.wasm  calculator_bg-72afaab8edaa689c.wasm.br  calculator_bg-c3c54a68d66973f9.wasm  calculator_bg-c3c54a68d66973f9.wasm.br  calculator_bg-d9d82070544f9d4c.wasm  calculator_bg-d9d82070544f9d4c.wasm.br
parser-combinator/: Cargo.toml
parser-combinator/src/: lib.rs
