[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["debug", "image"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
open = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["image", "debug", "webgl", "fira-sans"] }

console_error_panic_hook = "0.1"
console_log = "1.0"
